[project]
name = "ppsd-pyscripts"
version = "0.1.0"
description = "TDD test vector generation for ppsd-rs (ObsPy oracle)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.4.2",
    "obspy>=1.4.1",
    "setuptools<82",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.37.0",
    "ruff>=0.14.0",
]
